<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/pic2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<TextView
    android:id="@+id/heading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome_to_quizzer"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="250dp"
    android:textStyle="bold"
    android:textSize="30sp"
    android:textColor="@color/colorGrey" />
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/heading"
        android:textColorHint="@color/colorGrey"
        android:textColor="@color/colorGrey"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/colorGrey"
        android:textColor="@color/colorGrey"
        android:layout_below="@id/email"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="100dp"
        android:layout_below="@id/password"
        android:text="@string/login" />
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/colorGrey"
        android:layout_below="@id/password"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/loginbtn"
        />
    <Button
        android:id="@+id/signupbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/password"
        android:layout_toRightOf="@id/or"
        android:text="@string/signup" />




</RelativeLayout>