<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/pic4"
    android:layout_height="match_parent"
    tools:context=".Signup">
    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_here"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/colorGrey" />

    <EditText
        android:id="@+id/em"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head"
        android:layout_centerHorizontal="true"


        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorGrey"
        android:textColor="@color/colorGrey"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"

        android:textColorHint="@color/colorGrey"
        android:textColor="@color/colorGrey"
        android:layout_below="@id/em"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/cpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"

        android:textColorHint="@color/colorGrey"
        android:textColor="@color/colorGrey"
        android:layout_below="@id/pass"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/cpass"/>

</RelativeLayout>