<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/congo3"
    android:padding="5dp"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/congo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:layout_marginTop="300dp"
        android:layout_gravity="center_horizontal"


        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="You Scored: "
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/fscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/_1_10_"
        android:textStyle="bold"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/button"
        android:layout_width="137dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu" />

</LinearLayout>